--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,9 @@ indent_size = 2
 # C# files
 [*.cs]
 
+# CA1056: Uri properties should not be strings
+dotnet_diagnostic.CA1056.severity = none
+
 # CA1303: Do not pass literals as localized parameters
 dotnet_diagnostic.CA1303.severity = none    # Don't need translated exceptions
 
