--- a/src/EthernaGatewayCli/EthernaGatewayCli.csproj
+++ b/src/EthernaGatewayCli/EthernaGatewayCli.csproj
@@ -32,7 +32,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bee.Net" Version="0.2.0-alpha.239" />
-    <PackageReference Include="EthernaSdk.Users.Native" Version="0.3.3" />
+    <PackageReference Include="EthernaSdk.Users.Native" Version="0.4.0-alpha.32" />
     <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
