--- a/src/EthernaGatewayCli/EthernaGatewayCli.csproj
+++ b/src/EthernaGatewayCli/EthernaGatewayCli.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Etherna.CliHelper" Version="0.1.0" />
     <PackageReference Include="EthernaSdk.Users.Native" Version="0.4.0-alpha.56" />
     <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
       <PrivateAssets>all</PrivateAssets>
