--- a/src/EthernaGatewayCli/EthernaGatewayCli.csproj
+++ b/src/EthernaGatewayCli/EthernaGatewayCli.csproj
@@ -32,7 +32,7 @@
 
   <ItemGroup>
     <PackageReference Include="Etherna.CliHelper" Version="0.1.0" />
-    <PackageReference Include="EthernaSdk.Users.Native" Version="0.4.0-alpha.56" />
+    <PackageReference Include="EthernaSdk.Users.Gateway" Version="0.4.0-alpha.65" />
     <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
