--- a/src/EthernaGatewayCli/EthernaGatewayCli.csproj
+++ b/src/EthernaGatewayCli/EthernaGatewayCli.csproj
@@ -44,4 +44,9 @@
     <PackageReference Include="Mime-Detective" Version="24.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\..\COPYING" Pack="true" PackagePath="\" />
+    <None Include="..\..\README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+
 </Project>
