--- a/src/EthernaGatewayCli/EthernaGatewayCli.csproj
+++ b/src/EthernaGatewayCli/EthernaGatewayCli.csproj
@@ -45,8 +45,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\COPYING" Pack="true" PackagePath="\" />
-    <None Include="..\..\README.md" Pack="true" PackagePath="\" />
+    <None Include="..\..\COPYING" />
+    <None Include="..\..\README.md" />
   </ItemGroup>
 
 </Project>
